--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -45,7 +45,7 @@ This document describes the data underlying the Propensity to Cycle Tool (PCT) f
 The data was generated on `r build_date`.
 This document was created on `r Sys.Date()`.
 
-The data is presented in this document is from Version 1 of the PCT, an open source tool for sustainable transport planning, released under the conditions of the [AGPL Licence](https://www.gnu.org/licenses/agpl-3.0).
+The data is presented in this document is from version 1 of the PCT, an open source tool for sustainable transport planning, released under the conditions of the [AGPL Licence](https://www.gnu.org/licenses/agpl-3.0).
 
 This version uses origin-destination (OD) data on travel to work from the 2011 Census. This dataset reports the number of people travelling by different modes between Middle Super Output Area ([MSOA](https://data.gov.uk/dataset/middle-layer-super-output-areas-2001-to-middle-layer-super-output-areas-2011-to-local-authority)) zones. There were
 `r round(sum(zones$All) / 1000)` thousand
@@ -72,9 +72,6 @@ Only OD pairs with less than
 <!-- `r params$mflow_short` were selected. Adding those (overlapping) selection criteria -->
 <!-- resulted in  of all inter-zone commutes in the study area being -->
 <!-- selected, accounting for ( `r round(sum(l$All) / sum(zones$All) * 100, 2)`% of total commutes in `r region`). -->
-
-
- paragraph in any paper or report produced using these model results.
 
 ## Analysis
 
@@ -297,3 +294,7 @@ round(run_time, 2)
 ```
 
 This document was produced automatically at `r Sys.time()`.
+
+## Attribution
+
+Please cite the Propensity to Cycle Tool (verson 1) in any paper or report produced using these model results.
