--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -40,39 +40,25 @@ las_in_region <- las[las_in_region,]
 ```
 
 ## Key information 
+This document provides more information about the data underlying the Propensity to Cycle Tool (PCT) for `r R.utils::capitalize(region)`. The data was generated on `r build_date` and this document was created on `r Sys.Date()`. The PCT is an open source tool for sustainable transport planning, released under the conditions of the [AGPL Licence](https://www.gnu.org/licenses/agpl-3.0).Both the [pct](https://github.com/npct/pct) and [pct-shiny](https://github.com/npct/pct-shiny) can be modified by others given attribution to the original.
 
-This document describes the data underlying the Propensity to Cycle Tool (PCT) for `r R.utils::capitalize(region)`.
-The data was generated on `r build_date`.
-This document was created on `r Sys.Date()`.
-
-The data is presented in this document is from version 1 of the PCT, an open source tool for sustainable transport planning, released under the conditions of the [AGPL Licence](https://www.gnu.org/licenses/agpl-3.0).
-
-This version uses origin-destination (OD) data on travel to work from the 2011 Census. This dataset reports the number of people travelling by different modes between Middle Super Output Area ([MSOA](https://data.gov.uk/dataset/middle-layer-super-output-areas-2001-to-middle-layer-super-output-areas-2011-to-local-authority)) zones. There were
-`r round(sum(zones$All) / 1000)` thousand
+This version of the PCT uses origin-destination (OD) data on travel to work from the 2011 Census. The dataset reports the number of people travelling by different modes from Middle Super Output Area ([MSOA](https://data.gov.uk/dataset/middle-layer-super-output-areas-2001-to-middle-layer-super-output-areas-2011-to-local-authority)) zones. There were
+`r round(sum(zones$All))` 
 commuters in the study area, all of whom are represented in the area data produced by the PCT.  
 
-Of the `r n_flow_region`
-between-zone OD pairs in the study area, `r round(nrow(l) / n_flow_region * 100)`% are represented as
-lines on the interactive map.
-These `r nrow(l)` desire lines account for `r round(sum(l$All) / sum(zones$All) * 100)`% of all commuters in the study area and
+Lines on the interactive map  represent flows between zones in `r R.utils::capitalize(region)`. This excludes
+within-zone travel (`r round(sum(cents$All) / sum(zones$All) * 100)`% of commutes in `r R.utils::capitalize(region)`), commuters travelling outside `r R.utils::capitalize(region)` and people with no fixed place of work. 
+
+ Within `r R.utils::capitalize(region)` there are `r n_flow_region` between-zone OD pairs. Of these, `r round(nrow(l) / n_flow_region * 100)`% are represented as lines on the interactive map. The selection criteria used for this were (i) distance of less than 
+`r params$mdist`km and (ii) more than `r params$mflow` (by any mode).
+ 
+ The resultant `r nrow(l)` desire lines account for `r round(sum(l$All) / sum(zones$All) * 100)`% of all commuters in `r R.utils::capitalize(region)` and
 `r round(sum(l$All) / params$n_commutes_region * 100)`%
-of between-zone commutes taking place within the study area.
-The remainder is accounted for by commuters travelling outside the study region,
-within-zone travel (accounting for `r round(sum(cents$All) / sum(zones$All) * 100)`% of commutes) and people with no fixed place of work.
+of between-zone commutes taking place within `r R.utils::capitalize(region)`.
 
-The selection criteria used to select which OD pairs were shown on the map were as follows.
-Only OD pairs with less than
-`r params$mdist`km were and more than 
-`r params$mflow` (by any mode) were selected.
+## Scenario cycling by distance
 
-<!-- Commented out because the dual selection criteria is no longer used and can cause confusion. -->
-<!-- For OD pairs with maximum -->
-<!-- Euclidean distance of `r params$max_all_dist`, flows with a minimum flow of -->
-<!-- `r params$mflow_short` were selected. Adding those (overlapping) selection criteria -->
-<!-- resulted in  of all inter-zone commutes in the study area being -->
-<!-- selected, accounting for ( `r round(sum(l$All) / sum(zones$All) * 100, 2)`% of total commutes in `r region`). -->
-
-## Analysis
+The graph and table below illustrate the % of cyclists in each scenario by each distance band.
 
 ```{r, echo=FALSE, warning=FALSE, fig.cap="Rate of cycling in model scenarios. Note the total percentage cycling is equal to the area under each line."}
 levels(dfsp$scenario) <- gsub("_slc", "", levels(dfsp$scenario))
@@ -103,62 +89,15 @@ dfspread$`|  % trips cycled` <- all_scen$all / all_scen$all[1] * 100
 dfspread$`|  % trips cycled`[1] <- NA
 ```
 
-The table below illustrates the same information in terms of the % of cyclists in each scenario by each distance band.
-
 ```{r, echo=FALSE}
 kable(dfspread, format = "html", digits = 1, caption = "Summary statistics of the rate of cycling by distance bands (percentages) and the total number of cycle trips per for each scenario (far right column). The first row of data provides summary statistics (e.g. % trips by each distance band) for all modes. The subsequent rows report data on cycling only.", row.names = F)
 ```
 
-There are **`r n_flow_region`** OD pairs with origins and destinations in the
-study area. Of these, `r sum(sel_long)` meet the criteria that at least
-`r params$mflow` people travelled to work along OD pairs up to `r params$mdist` km
-in the 2011 Census. The additional selection criteria that at least
-`r params$mflow_short` people travelled to work along OD pairs up to
-`r params$max_all_dist` km was met by `r sum(sel_short)` OD pairs. Adding those
-(overlapping) selection criteria resulted in **`r nrow_flow`** or
-**`r pmflow`%** of all inter-zone OD pairs were selected in the region, accounting
-for **`r pmflowa`%** of inter-zone commutes in the study area.
+## Zone information
 
-## Introduction
+In `r R.utils::capitalize(region)` there are `r nrow(zones)`, compared with 6791 in England. The median area of zones is `r round(median(gArea(spTransform(zones, CRS("+init=epsg:27700")), byid = T) / 10000), 1)` ha, compared with 300 ha across England
 
-The results of the National Propensity to Cycle Tool (NPCT) scenarios are based on a model.
-This document presents information about the input data, model diagnostics,
-run time and the key outputs for each region.
-The aim is to inform users of the NPCT's interactive map how the results were generated.
-This document assumes some technical knowledge in the area of transport planning.
-
-Both the [pct](https://github.com/npct/pct) and [pct-shiny](https://github.com/npct/pct-shiny) can be modified by others provided attribution to the original.
-
-## Initial parameters
-
-The preset values used to select the study area and filter the origin destination data are described in this section.
-
-```{r, warning=FALSE}
-region # name of the region
-params$mflow # Minimum flow between od pairs to show. High means fewer lines
-params$mflow_short # Minimum flow between od pairs to show. High means fewer lines
-
-# Distances
-params$mdist # maximum euclidean distance (km) for subsetting lines
-params$max_all_dist  # maximum distance (km) below which more lines are selected
-params$buff_dist  # buffer (km) used to select additional zones (often zero = ok)
-params$buff_geo_dist # buffer (m) for removing line start and end points for network
-```
-
-## Input zone data
-
-The input zones area are summarised in this section.
-
-The selected region is `r region`.
-
-The characteristics of zones are as follows:
-
-- Number of zones: `r nrow(zones)`, compared with 6791 in England
-- Median area of zones: `r round(median(gArea(spTransform(zones, CRS("+init=epsg:27700")), byid = T) / 10000), 1)` ha, compared with 300 ha across England
-
-## Input flow data
-
-```{r distance-dist, echo=FALSE, fig.cap="The study region (thick black border), selected zones (grey), the administrative zone region (red line) and local authorities (blue line). The black straight green represent the most intensive commuting OD pairs.", echo=FALSE, message=FALSE, warning=FALSE}
+```{r distance-dist, echo=FALSE, fig.cap="The study region (thick black border), selected zones (grey), the administrative zone region (red line) and local authorities (blue line). The black straight green represents the most intensive commuting OD pairs.", echo=FALSE, message=FALSE, warning=FALSE}
 
 plot(zones, col = "lightgrey")
 plot(regions, add = T)
@@ -168,10 +107,7 @@ plot(region_shape, border = "red", add = T, lwd = 2)
 lines(l[l$All > 100,], col = "green")
 ```
 
-
-## Hilliness of OD pairs
-
-The average hilliness of zones in the study area is
+The average hilliness of zones in `r R.utils::capitalize(region)` is
 `r round(100 * mean(zones$avslope), 1)`
 percent.
 
@@ -183,27 +119,9 @@ percent.
 tm_shape(zones) +
   tm_fill("avslope", n = 3, palette = "Oranges")
 ```
-
-## Lines allocated to the road network
-
-We use CycleStreets.net to estimate optimal routes.
-An illustration of these routes is presented below.
-
-```{r plot-rlines, warning=FALSE, echo = FALSE, fig.cap="Straight and route-lines allocated to the travel network"}
-plot(l[seq(1, nrow(l), length.out = 100),])
-lines(rf[seq(1, nrow(l), length.out = 100),], col = "red")
-lines(rq[seq(1, nrow(l), length.out = 100),], col = "green")
-```
-
-```{r check-line, warning=FALSE, echo = FALSE, fig.cap="Check the final line"}
-plot(l[nrow(l),])
-lines(rf[nrow(l),], col = "red")
-lines(rq[nrow(l),], col = "green")
-```
-
 ## Distance distributions
 
-The distance distribution of trips in the study area is displayed in the figure below, which compares the result with the distribution of trips nationwide.
+The distance distribution of trips in  `r R.utils::capitalize(region)` is displayed in the figure below, which compares the result with the distribution of trips nationwide.
 
 ```{r, echo=FALSE, warning=F, fig.cap="Distance distribution of all trips in study lines (blue) compared with national average (dotted bars)"}
 luk <- readRDS(file.path(pct_bigdata, "l_sam8.Rds"))
@@ -240,9 +158,6 @@ From the nationwide sample of trips, `r pl5kmuk`% of trips are less than 5km.
 
 In the case study area `r pl5km`% of sampled trips are less than 5km.
 
-Subsetting by distance (set to `r params$mdist` km) and removing inter-zone OD pairs
-further reduces the number of OD pairs from `r sum(sel_long | sel_short)` to `r nrow(l)`.
-
 ## The flow model
 
 To estimate the potential rate of cycling under different scenarios
@@ -268,33 +183,16 @@ lines(rq, col = "green")
 lines(rf, col = "blue")
 ```
 
-## Network analysis
-
-Now we aggregate the overlapping routes to create a route network.
-The value of each segment in the network corresponds to the total number of cyclists who we estimate to use the segment.
-
-```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.cap="The route network, with widths proportional to the current estimated number of commuter cyclists"}
-
-# test the rnet plot
-plot(rnet, lwd = rnet$Bicycle / mean(rnet$Bicycle))
-```
-
-## Health impacts
+## Health impacts - NEEDS table
 
 A modified
 version of the 2014 [HEAT tool](http://www.euro.who.int/en/health-topics/environment-and-health/Transport-and-health/publications/2011/health-economic-assessment-tools-heat-for-walking-and-for-cycling.-methodology-and-user-guide.-economic-assessment-of-transport-infrastructure-and-policies.-2014-update)
 was used.
 
-## Time taken
+The table below illustrates the health impacts of the different scenarios, including changes in lives lost and health economic benefits.
 
-The time taken to run the analysis for this area is presented below:
+## CO2 emissions - NEEDS table
 
-```{r, echo=FALSE}
-round(run_time, 2)
-```
+To calculate changes in CO2 emissions we used estimates of the reductions in driving that would result from each scenario.
 
-This document was produced automatically at `r Sys.time()`.
-
-## Attribution
-
-Please cite the Propensity to Cycle Tool (verson 1) in any paper or report produced using these model results.
+The table below illustrates the estimated CO2 impacts of the different scenarios.
