--- a/model_output.Rmd
+++ b/model_output.Rmd
@@ -22,6 +22,7 @@ pct_bigdata <- file.path("..", "pct-bigdata")
 zones = readRDS(file.path(pct_data, region, "z.Rds"))
 cents = readRDS(file.path(pct_data, region, "c.Rds"))
 l = readRDS(file.path(pct_data, region, "l.Rds"))
+rf_nat <- readRDS(file.path(pct_bigdata, "rf.Rds"))
 rf = readRDS(file.path(pct_data, region, "rf.Rds"))
 rq = readRDS(file.path(pct_data, region, "rq.Rds"))
 rnet = readRDS(file.path(pct_data, region, "rnet.Rds"))
@@ -42,19 +43,35 @@ las_in_region <- las[las_in_region,]
 ```
 
 ## Key information 
+
 This document provides more information about the data underlying the Propensity to Cycle Tool (PCT) for `r R.utils::capitalize(region)`. The data was generated on `r build_date` and this document was created on `r Sys.Date()`. The PCT is an open source tool for sustainable transport planning, released under the conditions of the [AGPL Licence](https://www.gnu.org/licenses/agpl-3.0).Both the [pct](https://github.com/npct/pct) and [pct-shiny](https://github.com/npct/pct-shiny) can be modified by others given attribution to the original.
 
 This version of the PCT uses origin-destination (OD) data on travel to work from the 2011 Census. The dataset reports the number of people travelling by different modes from Middle Super Output Area ([MSOA](https://data.gov.uk/dataset/middle-layer-super-output-areas-2001-to-middle-layer-super-output-areas-2011-to-local-authority)) zones. There were
 `r prettyNum(sum(zones$All), big.mark = ",", scientific = F)`
-commuters in the study area from this data source. All of these are represented in the area data produced by the PCT.  
+commuters in the study area recorded in the 2011 Census.
+All of these are represented in the area data produced by the PCT.  
 
 <!-- as discussed can we please insert actual not rounded number-->
 
-Lines on the interactive map  represent flows between zones in `r R.utils::capitalize(region)`. This excludes
-within-zone travel (`r round(sum(cents$All) / sum(zones$All) * 100)`% of commutes in `r R.utils::capitalize(region)`), commuters travelling outside `r R.utils::capitalize(region)` and people with no fixed place of work. Within `r R.utils::capitalize(region)` there are `r n_flow_region` between-zone OD pairs. Of these, `r round(nrow(l) / n_flow_region * 100)`% are represented as lines on the interactive map. The selection criteria used for this were (i) distance of less than 
-`r params$mdist`km and (ii) more than `r params$mflow` (by any mode). The resultant `r nrow(l)` desire lines account for `r round(sum(l$All) / sum(zones$All) * 100)`% of all commuters in `r R.utils::capitalize(region)` and
+Within `r R.utils::capitalize(region)` there are `r n_flow_region` between-zone flows with a straight line distance of less than 30km.
+
+<!-- Lines on the interactive map represent flows between zones within `r R.utils::capitalize(region)` that meet the selection criteria for visualisation: only lines less than `r mdist` km in straight line (Euclidean) distance and with at least `r mflow` commuters (by any mode) using it -->
+
+Of these, `r nrow(l)` (`r round(nrow(l) / n_flow_region * 100)`%) are represented as **Straight Lines**, **Routes** (fastest and quietest) and the **Route Network** on the interactive map, capturing
 `r round(sum(l$All) / params$n_commutes_region * 100)`%
-of between-zone commutes taking place within `r R.utils::capitalize(region)`.
+of the between-zone commutes < 30 km within
+`r R.utils::capitalize(region)`.
+The following selection criteria was used to select which flows were visualised:
+
+- Straight line (Euclidean) distance of less than 
+`r mdist` km.
+- More than `r mflow` commuters (by any mode).
+
+These `r nrow(l)` desire lines account for
+`r round(sum(l$All) / sum(zones$All) * 100)`% of all commutes in
+`r R.utils::capitalize(region)`.
+
+Between-zone flows exclude **within-zone travel** (represented as red points on the map when the lines are shown), which accounts for `r round(sum(cents$All) / sum(zones$All) * 100)`% of commutes in `r R.utils::capitalize(region)`, commuters travelling outside `r R.utils::capitalize(region)` and people with no fixed place of work.
 
 See ([Lovelace et al.](http://arxiv.org/abs/1509.04425)) for details of the methods we used to estimate the cycling, health and carbon impacts of each scenario, and to visualise results at the area, line, route and route network level.
 
@@ -72,9 +89,12 @@ plot(region_shape, border = "red", add = T, lwd = 2)
 lines(l[l$All > 100,], col = "green")
 ```
 
-The average hilliness of zones in `r R.utils::capitalize(region)` is
-`r round(100 * mean(zones$avslope), 1)`
-percent.
+The average hilliness of the fastest routes in
+`r R.utils::capitalize(region)`
+`r round(100 * mean(rf$av_incline, na.rm = T), 2)`%,
+compared with a national average of
+`r round(100 * mean(rf_nat$av_incline, na.rm = T), 2)`%.
+
 
 ```{r, echo = FALSE}
 # # It used to say - see below. What to replace this with?
@@ -87,7 +107,12 @@ tm_shape(zones) +
 
 ## Cycling levels in each scenario for `r R.utils::capitalize(region)`
 
-The proportion of cyclists in the baseline data in `r R.utils::capitalize(region)` is xx% <!-- please calculate-->, compared to national proportions of 3.2%. The proportion of cyclists is shown in the table below, alongside the proportion of people walking, driving and using other modes.
+The proportion of cyclists in the baseline (2011 Census) data in `r R.utils::capitalize(region)` is 
+`r round(100 * sum(zones$Bicycle) / sum(zones$All) , 1)`%, compared to national average of 3.2%.
+The percentage of cycling expected, based on the distance and hilliness of commutes in the region using the baseline model for England, was
+`r round(100 * (sum(zones$govtarget_slc) - sum(zones$Bicycle)) / sum(zones$All) , 1)`%.
+
+The proportion of cyclists is shown in the table below, alongside the proportion of people walking, driving and using other modes.
 
 
 <!--As discussed with Anna - can we please have here a table for the whole region per scenario, using area-based data? This would look like the following
@@ -101,7 +126,7 @@ The proportion of cyclists in the baseline data in `r R.utils::capitalize(region
 
 <!--I think we either need to remove this graph or make clearer source of data - what is included? Are we including within zone-based trips?
 -->
-```{r, echo=FALSE, warning=FALSE, fig.cap="Rate of cycling in model scenarios. Note the total percentage cycling is equal to the area under each line."}
+```{r, echo=FALSE, warning=FALSE, fig.cap="Percent of commuters cycling in model scenarios for between-zone trips within the region, stratified by trip distance. Note the total percentage cycling is equal to the area under each line."}
 levels(dfsp$scenario) <- gsub("_slc", "", levels(dfsp$scenario))
 levels(dfsp$scenario) <- R.utils::capitalize(levels(dfsp$scenario))
 levels(dfsp$scenario)[2:5] = c("Ebikes", "Go Dutch", "Gender Equality", "Government Target")
@@ -120,7 +145,7 @@ ggplot(dfsp) +
 
 A modified
 version of the 2014 [HEAT tool](http://www.euro.who.int/en/health-topics/environment-and-health/Transport-and-health/publications/2011/health-economic-assessment-tools-heat-for-walking-and-for-cycling.-methodology-and-user-guide.-economic-assessment-of-transport-infrastructure-and-policies.-2014-update)
-was used to calculate health impacts. CO2 impacts are derived from changes in distance driven per scenario.
+was used to calculate health impacts, based on the extra physical activity gained through new cycling trips in each scenario, minus the physical activity displaced in any former walking trips that have now been switched to cycling. CO^2^ impacts are derived from changes in distance driven per scenario.
 
 The table below illustrates the health and carbon impacts of the different scenarios.
 
@@ -136,5 +161,5 @@ Gender equity 'No Cyclists'
 Go Dutch 'No Cyclists'
             Census 2011
 Ebikes 'No Cyclists'
-            Census 2011
+            Census 2011-->
 
